--- a/dev/minio/tenant.yaml
+++ b/dev/minio/tenant.yaml
@@ -49,7 +49,7 @@ spec:
   ## for details.
   podManagementPolicy: Parallel
   ## Secret with credentials and configurations to be used by MinIO Tenant.
-  configuration: { }
+  #configuration: { }
   #  name: storage-configuration
   ## Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
   env:
