--- a/dev/minio/tenant.yaml
+++ b/dev/minio/tenant.yaml
@@ -49,26 +49,10 @@ spec:
   ## for details.
   podManagementPolicy: Parallel
   ## Secret with credentials and configurations to be used by MinIO Tenant.
-  configuration: { }
-  #  name: storage-configuration
+  configuration:
+    name: storage-configuration
   ## Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-  env:
-  - name: MINIO_ROOT_USER
-    value: "minio"
-  - name: MINIO_ROOT_PASSWORD
-    value: "minio123"
-  - name: MINIO_REGION_NAME
-    value: "eu-central-1"
-  - name: MINIO_STORAGE_CLASS_STANDARD
-    value: "EC:2"
-  - name: MINIO_BROWSER
-    value: "on"
-  - name: MINIO_PROMETHEUS_JOB_ID
-    value: "minio-prom-job"
-  - name: MINIO_PROMETHEUS_URL
-    value: "http://kube-prom-stack-kube-prome-prometheus.observability.svc.cluster.local"
-  - name: MINIO_PROMETHEUS_AUTH_TYPE
-    value: "public"
+  env: []
   ## serviceMetadata allows passing additional labels and annotations to MinIO and Console specific
   ## services created by the operator.
   serviceMetadata:
@@ -223,8 +207,8 @@ spec:
           type: RuntimeDefault
   ## Enable automatic Kubernetes based certificate generation and signing as explained in
   ## https://kubernetes.io/docs/tasks/tls/managing-tls-in-a-cluster
-  #requestAutoCert: true
-  requestAutoCert: false
+  requestAutoCert: true
+  #requestAutoCert: false
   # The minimum number of days to expiry before an alert for an expiring certificate is fired.
   # In the below example, if a given certificate will expire in 7 days then expiration events will only be triggered 1 day before expiry
   # certExpiryAlertThreshold: 1
